--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# Compiled class file
-*.class
+## Build generated
+build/
+DerivedData/
 
-# Log file
-*.log
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
 
-# BlueJ files
-*.ctxt
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+# Packages/
+# Package.pins
+# Package.resolved
+.build/
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
